--- a/styles.css
+++ b/styles.css
@@ -77,7 +77,9 @@ fieldset label {
 .box {
   margin-top: 20pt;
   padding: 15pt;
-
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
   border: 3pt solid black;
   width: 80%;
   background-color: white;
